log/build_2024-06-17_11-14-34/loki_base/stdout_stderr.log
running egg_info
writing ../../../../build/loki_base/loki_base.egg-info/PKG-INFO
writing dependency_links to ../../../../build/loki_base/loki_base.egg-info/dependency_links.txt
writing entry points to ../../../../build/loki_base/loki_base.egg-info/entry_points.txt
writing requirements to ../../../../build/loki_base/loki_base.egg-info/requires.txt
writing top-level names to ../../../../build/loki_base/loki_base.egg-info/top_level.txt
reading manifest file '../../../../build/loki_base/loki_base.egg-info/SOURCES.txt'
writing manifest file '../../../../build/loki_base/loki_base.egg-info/SOURCES.txt'
running build
running build_py
copying loki_base/pltf_clc_std.py -> /home/loki/Documents/GitHub/saga_repo/build/loki_base/build/lib/loki_base
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /home/loki/Documents/GitHub/saga_repo/build/loki_base/build/lib/loki_base/pltf_clc_std.py -> /home/loki/Documents/GitHub/saga_repo/install/loki_base/lib/python3.10/site-packages/loki_base
byte-compiling /home/loki/Documents/GitHub/saga_repo/install/loki_base/lib/python3.10/site-packages/loki_base/pltf_clc_std.py to pltf_clc_std.cpython-310.pyc
  File "/home/loki/Documents/GitHub/saga_repo/install/loki_base/lib/python3.10/site-packages/loki_base/pltf_clc_std.py", line 351
    opp_switch = steering[0]
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

running install_data
running install_egg_info
removing '/home/loki/Documents/GitHub/saga_repo/install/loki_base/lib/python3.10/site-packages/loki_base-2.0.0-py3.10.egg-info' (and everything under it)
Copying ../../../../build/loki_base/loki_base.egg-info to /home/loki/Documents/GitHub/saga_repo/install/loki_base/lib/python3.10/site-packages/loki_base-2.0.0-py3.10.egg-info
running install_scripts
Installing base_driver script to /home/loki/Documents/GitHub/saga_repo/install/loki_base/lib/loki_base
Installing enlcosure_board_serial script to /home/loki/Documents/GitHub/saga_repo/install/loki_base/lib/loki_base
Installing isaac_wheels script to /home/loki/Documents/GitHub/saga_repo/install/loki_base/lib/loki_base
writing list of installed files to '/home/loki/Documents/GitHub/saga_repo/build/loki_base/install.log'
